# LoRa-Water-Quality-Management-System

./: README.md  howdy.txt
Cleaning_Code_and_Saved_Datasets/: cleaning_data_V1.m  cleaning_data_V2.m  cleaning_data_V3.m  cleaning_data_V4.m  cleaning_data_V5.m  dataset_timetable_new_dates_10min.mat  dataset_timetable_new_dates_30min.mat  plots.mlx
Dashboard/: lwqms_logger.py  lwqms_logger_v2.py
Documentation/: Predictive Neural Network Development Log.docx  Sensor Node Development Log.docx  SensorNodeDiagram.drawio  brisbane_water_quality_dataset.csv  ~$nsor Node Development Log.docx
Formatting_Data_Code/: data_formatting_withTime.m  data_formatting_withoutTime.m  dataset_cleaned_normalized.mat  dataset_cleaned_notNormalized.mat  dataset_cleaned_notNormalized_smooth_withoutTime.mat  dataset_formatted_notNormalized_smooth_withoutTime.mat  dataset_formatted_withoutTime.mat  dataset_notNormalized_formatted_withoutTime.mat
Gateway/Dashboard/: guiV5.py
NN_training/: Copy_of_TimeSeriesForecastingNN.mlx  RMSE_open_loop_per_timestep.fig  TimeSeriesForecastingNN.mlx  model.onnx  new_plots.m  open_loop_forecasting.fig  test.m
Sensor Node/: BOM.xlsx  Final PCB Design Points of Consider.txt
Sensor Node/code/: main.h  (+2 more)
Sensor Node/ph sensor/code/: CMakeLists.txt
Sensor Node/ph sensor/code/src/: ph.c
simulation/: Draft1.asc  Draft1.op.raw  Draft1.raw  Draft2.asc  Draft2.op.raw  Draft2.raw  Draft3.asc  Draft3.op.raw  Draft3.raw  Draft4.op.raw  Draft4.raw  SimOut.docx  turbiditySensor.asc  turbiditySensor.net  turbiditySensor.op.raw  turbiditySensor.raw  ~$SimOut.docx
(+455 files in other folders)
